--- a/public/styles/style_func.css
+++ b/public/styles/style_func.css
@@ -736,5 +736,5 @@
     
     /* Dashboard do funcionário */
     .employee-dashboard {
-        display: none;
+        margin: 1rem 14rem 1rem 14rem;
     }
